[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Stations/station_mortar_empty.png" type="Texture" id=1]
[ext_resource path="res://Assets/Stations/station_mortar_in_use.png" type="Texture" id=2]
[ext_resource path="res://Assets/Stations/station_pestle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Stations/station_mortar_output_pink.png" type="Texture" id=4]
[ext_resource path="res://Stations/MortarSet.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 64 )

[node name="MortarSet" type="Node2D"]
position = Vector2( 1056, 176 )
script = ExtResource( 5 )

[node name="Pestle" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
z_index = 1
frames = SubResource( 3 )
centered = false

[node name="MortarEmpty" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="MortarInUse" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="MortarOutput" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 32, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 4 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
